[gd_scene load_steps=4 format=2]

[ext_resource path="res://Interface/HUD.tres" type="Theme" id=1]
[ext_resource path="res://Presentation/Slides/slide_1.png" type="Texture" id=2]
[ext_resource path="res://Presentation/Presentation.gd" type="Script" id=3]

[node name="Presentation" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.0625
anchor_top = 0.106667
anchor_right = 0.9375
anchor_bottom = 0.853333
margin_bottom = -3.8147e-06
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Back" type="Button" parent="."]
margin_left = 64.0
margin_top = 520.0
margin_right = 192.0
margin_bottom = 568.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Next" type="Button" parent="."]
margin_left = 832.0
margin_top = 520.0
margin_right = 960.0
margin_bottom = 568.0
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Demo" type="Button" parent="."]
visible = false
margin_left = 472.0
margin_top = 520.0
margin_right = 600.0
margin_bottom = 568.0
text = "Demo!!"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Demo" to="." method="_on_Demo_pressed"]
